--- a/opencortex/.gitignore
+++ b/opencortex/.gitignore
@@ -31,7 +31,14 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.local
+.env.production
+!.env.example
+
+# database
+*.db
+*.db-journal
 
 # vercel
 .vercel
@@ -41,3 +48,4 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
+.env*.local
