--- a/opencortex/.env.example
+++ b/opencortex/.env.example
@@ -5,3 +5,9 @@
 
 DATABASE_URL="postgresql://user:password@ep-xxxxx-pooler.us-east-2.aws.neon.tech/neondb?sslmode=require"
 DIRECT_URL="postgresql://user:password@ep-xxxxx.us-east-2.aws.neon.tech/neondb?sslmode=require"
+
+# Public app URL (production)
+# Set this in your Vercel project settings → Environment Variables
+# Agents use this to discover the cloud deployment instead of localhost
+# Example: https://opencortex.vercel.app
+NEXT_PUBLIC_APP_URL=""
